--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,3 +36,5 @@ jobs:
           echo test, and deploy your project.
       - name: Extra Proses'
         run: date
+      - name: Nama Proses'
+        run: raihan.py
